# libdogma

./: .gitignore  CHANGELOG  CREDITS  Makefile.am  README.md  configure.ac  libdogma.pc.in
include/: dogma-extra.h  dogma.h
src/: attribute.c  attribute.h  dogma.c  dogma.h  dogma_internal.c  dogma_internal.h  eval.c  eval.h  extra.c  fleet.c  fleet.h  libdogma.sym  modifier.c  modifier.h  tables.c  tables.h
src/core/: attribute.c  attribute.h  dogma.c  dogma_internal.c  dogma_internal.h  eval.c  eval.h  fleet.c  fleet.h  modifier.c  modifier.h  tables.c  tables.h
src/ctl/: main.c
src/extra/: capacitor.c  extra.c
test/: ancillary-modules.c  basic-area.c  basic-attributes.c  basic-charges.c  basic-fleet.c  basic-propulsion.c  basic-skill-levels.c  bruteforce.c  bug-capacitor-projected-0percentstable.c  bug-drones-segfault.c  bug-zero-powergrid.c  drones.c  extra-capacitor-remote.c  extra-capacitor.c  extra-misc.c  extra-side-effects.c  fleet-stacking.c  implants.c  missile-module.c  projected-effects.c  projected-stacking.c  self-on-self.c  stacking-penalties.c  tactical-destroyer-modes.c  test.h  trivial.c
tools/: bootstrap_from_json
